project/apps/network-policies/longhorn-system/00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-default-deny
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
